Vivado Project/PraticewithI2C_Inter.sdk/.metadata/.plugins/org.eclipse.cdt.ui/Hello_2Gyro.build.log
00:31:35 **** Auto Build of configuration Debug for project Hello_2Gyro ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/platform/I2Cdev.cpp'
'Invoking: ARM v7 g++ compiler'
arm-none-eabi-g++ -Wall -O0 -g3 -I"C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\Hello_2Gyro\src\hexapod" -I"C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\Hello_2Gyro\src\hexapod_leg" -I"C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\Hello_2Gyro\src\imu" -I"C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\Hello_2Gyro\src\platform" -c -fmessage-length=0 -MT"src/platform/I2Cdev.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../Hello_2Gyro_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/platform/I2Cdev.d" -MT"src/platform/I2Cdev.o" -o "src/platform/I2Cdev.o" "../src/platform/I2Cdev.cpp"
'Finished building: ../src/platform/I2Cdev.cpp'
' '
'Building file: ../src/platform/i2c.c'
'Invoking: ARM v7 g++ compiler'
arm-none-eabi-g++ -Wall -O0 -g3 -I"C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\Hello_2Gyro\src\hexapod" -I"C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\Hello_2Gyro\src\hexapod_leg" -I"C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\Hello_2Gyro\src\imu" -I"C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\Hello_2Gyro\src\platform" -c -fmessage-length=0 -MT"src/platform/i2c.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../Hello_2Gyro_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/platform/i2c.d" -MT"src/platform/i2c.o" -o "src/platform/i2c.o" "../src/platform/i2c.c"
'Finished building: ../src/platform/i2c.c'
' '
'Building file: ../src/platform/interrupt.c'
'Invoking: ARM v7 g++ compiler'
arm-none-eabi-g++ -Wall -O0 -g3 -I"C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\Hello_2Gyro\src\hexapod" -I"C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\Hello_2Gyro\src\hexapod_leg" -I"C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\Hello_2Gyro\src\imu" -I"C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\Hello_2Gyro\src\platform" -c -fmessage-length=0 -MT"src/platform/interrupt.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../Hello_2Gyro_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/platform/interrupt.d" -MT"src/platform/interrupt.o" -o "src/platform/interrupt.o" "../src/platform/interrupt.c"
In file included from ../../Hello_2Gyro_bsp/ps7_cortexa9_0/include/xstatus.h:55:0,
                 from ../../Hello_2Gyro_bsp/ps7_cortexa9_0/include/xgpiops.h:121,
                 from ../src/platform/interrupt.h:10,
                 from ../src/platform/interrupt.c:8:
../src/platform/interrupt.c: In function 'int setupIntrSystem(int, void (*)(XGpioPs*, u32, u32), int)':
../src/platform/interrupt.c:41:40: warning: the address of 'void XGpioPs_IntrHandler(XGpioPs*)' will never be NULL [-Waddress]
  Xil_AssertNonvoid(XGpioPs_IntrHandler != NULL);
                                        ^
../../Hello_2Gyro_bsp/ps7_cortexa9_0/include/xil_assert.h:132:9: note: in definition of macro 'Xil_AssertNonvoid'
     if (Expression) {                              \
         ^~~~~~~~~~
../src/platform/interrupt.c: In function 'int initScuGic()':
../src/platform/interrupt.c:62:57: error: 'prvGetInterruptControllerInstance' was not declared in this scope
  GicInst = (XScuGic*) prvGetInterruptControllerInstance();
                                                         ^
make: *** [src/platform/interrupt.o] Error 1

00:31:36 Build Finished (took 1s.6ms)

